--- a/MyGameWin.csproj
+++ b/MyGameWin.csproj
@@ -38,7 +38,33 @@
   </PropertyGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="src\DeploymentController.cs" />
+    <Compile Include="src\DiscoveryController.cs" />
+    <Compile Include="src\EndingGameController.cs" />
+    <Compile Include="src\GameController.cs" />
+    <Compile Include="src\GameLogic.cs" />
     <Compile Include="src\GameMain.cs" />
+    <Compile Include="src\GameResources.cs" />
+    <Compile Include="src\GameState.cs" />
+    <Compile Include="src\HighScoreController.cs" />
+    <Compile Include="src\MenuController.cs" />
+    <Compile Include="src\model\AIHardPlayer.cs" />
+    <Compile Include="src\model\AIMediumPlayer.cs" />
+    <Compile Include="src\model\AIOption.cs" />
+    <Compile Include="src\model\AIPlayer.cs" />
+    <Compile Include="src\model\AttackResult.cs" />
+    <Compile Include="src\model\BattleShipsGame.cs" />
+    <Compile Include="src\model\Direction.cs" />
+    <Compile Include="src\model\ISeaGrid.cs" />
+    <Compile Include="src\model\Player.cs" />
+    <Compile Include="src\model\ResultOfAttack.cs" />
+    <Compile Include="src\model\SeaGrid.cs" />
+    <Compile Include="src\model\SeaGridAdapter.cs" />
+    <Compile Include="src\model\Ship.cs" />
+    <Compile Include="src\model\ShipName.cs" />
+    <Compile Include="src\model\Tile.cs" />
+    <Compile Include="src\model\TileView.cs" />
+    <Compile Include="src\UtilityFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="SwinGame">
